@@ -59,5 +59,8 @@ support.
 
 26. Fix: script file name fix if the error messages where it was appending file suffixes.
 
-27: New: constant specifications (i.e. forward constants). [docs needed] [tests needed]
+27. New: constant specifications (i.e. forward constants). [docs needed] [tests needed]
+
+28. Fix: tests for now ignore deleted identifiers within the symbol table.  Before, only deleted identifiers on the top of the symbol table were ignored.
+
 
